# CAR-Control-Node

./: CHANGELOG.md  CMakeLists.txt  README.md  README.txt  package.xml  setup.cfg  setup.py
coupled_mpc_controller/: __init__.py  controller_node.py  ocp_definition.py
launch/: coupled_mpc_controller.launch.py  lqr_pid_controller.launch.py
lqr_pid_controller/: __init__.py  controller_node.py
