# ifp2107 — Ian Pichs, Columbia University, ELEN 6760 Spring 2026
cmake_minimum_required(VERSION 3.5)
project(lqr_pid_controller)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

ament_python_install_package(${PROJECT_NAME})

install(
  PROGRAMS
    scripts/controller_node
  DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
