<?xml version="1.0"?>
<package format="3">
  <name>lqr_pid_controller</name>
  <version>0.2.0</version>
  <description>
    DUT25 LQR lateral + PID longitudinal controller. Drop-in replacement for
    mpc_python_exec and longitudinal_control in the skidpad pipeline. Subscribes
    to controller_msgs/OptRequest and AccRequest; publishes OptResult and PIDErrors.
  </description>
  <maintainer email="pichs@todo.com">pichs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>controller_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
